<resources>
    <string name="app_name">KotlinCalculator</string>
    <string name="action_clear">AC</string>
    <string name="action_change_sign">±</string>
    <string name="action_percent">%</string>
    <string name="action_divide">÷</string>
    <string name="action_multiply">×</string>
    <string name="action_subtract">−</string>
    <string name="action_add">+</string>
    <string name="action_decimal">.</string>
    <string name="action_equals">=</string>
    <string name="digit_0">0</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>
</resources>
