<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textAlignment="textEnd"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@id/llButtonArea"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1"
        android:lines="5"
        style="@style/TextStyle"
        tools:text="123.45"
        tools:ignore="MissingConstraints" />


    <LinearLayout
        android:id="@+id/llButtonArea"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDisplay"
        app:layout_constraintVertical_weight="1"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/llFirstButtonLine"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAC"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/TextStyle"
                android:text="@string/action_clear"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/btnChangeSign"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/TextStyle"
                android:text="@string/action_change_sign" />

            <Button
                android:id="@+id/btnPercent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/TextStyle"
                android:text="@string/action_percent" />

            <Button
                android:id="@+id/btnDivision"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/TextStyle"
                android:text="@string/action_divide" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSecondButtonLine"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSeven"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/TextStyle"
                android:text="@string/digit_7"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/btnEight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/TextStyle"
                android:text="@string/digit_8" />

            <Button
                android:id="@+id/btnNine"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/TextStyle"
                android:text="@string/digit_9" />

            <Button
                android:id="@+id/btnMultiplication"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/TextStyle"
                android:text="@string/action_multiply" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llThirdButtonLine"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnFour"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/TextStyle"
                android:text="@string/digit_4"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/btnFive"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/TextStyle"
                android:text="@string/digit_5" />

            <Button
                android:id="@+id/btnSix"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/TextStyle"
                android:text="@string/digit_6" />

            <Button
                android:id="@+id/btnSubtraction"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/TextStyle"
                android:text="@string/action_subtract" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llFourthButtonLine"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnOne"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/TextStyle"
                android:text="@string/digit_1"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/btnTwo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/TextStyle"
                android:text="@string/digit_2" />

            <Button
                android:id="@+id/btnThree"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/TextStyle"
                android:text="@string/digit_3" />

            <Button
                android:id="@+id/btnAddition"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/TextStyle"
                android:text="@string/action_add" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llFifthButtonLine"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnZero"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                style="@style/TextStyle"
                android:text="@string/digit_0"
                tools:ignore="NestedWeights" />


            <Button
                android:id="@+id/btnDot"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/TextStyle"
                android:text="@string/action_decimal" />

            <Button
                android:id="@+id/btnEqual"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/TextStyle"
                android:text="@string/action_equals" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
